--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,20 @@
 name = "peer-review-mcp"
 version = "0.1.0"
 requires-python = ">=3.10"
+dependencies = [
+    "google-genai>=0.3.0",
+    "anthropic>=0.7.0",
+    "openai>=1.0.0",
+    "mcp>=0.1.0",
+    "python-dotenv>=1.0.0",
+    "certifi>=2023.0.0",
+]
+
+[project.optional-dependencies]
+dev = [
+    "pytest>=9.0.0",
+    "pytest-asyncio>=0.23.0",
+]
 
 [build-system]
 requires = ["setuptools"]
